# hotel_key_system

./: .env.example  .gitignore  README.md  craco.config.js  docker-compose.yml  package-lock.json  package.json  run-local.sh  run.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  dependencies.py  main.py  security.py
backend/app/api/: auth.py  hotels.py  keys.py  passes.py  reservations.py  rooms.py  router.py  users.py  verify.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/models/: base.py  device.py  device_log.py  digital_key.py  hotel.py  key_event.py  reservation.py  room.py  user.py
backend/app/schemas/: digital_key.py  hotel.py  reservation.py  room.py  sms.py  user.py
backend/app/services/: device_service.py  email_service.py  hotel_service.py  key_service.py  pass_update_service.py  sms_service.py  verification_service.py  wallet_push_service.py  wallet_service.py
backend/app/static/passes/: hotelkey_00394cc6-ebcf-4443-a942-4c6179ffcefa.pkpass  hotelkey_01b6f7b5-d1e1-46d1-9589-f7e7fdead24d.pkpass  hotelkey_02f7dd1c-9b20-4097-a8e7-716b8be78416.pkpass  hotelkey_04261da3-d276-44bc-924e-cad8047b14c2.pkpass  hotelkey_05044ab7-4f7a-413a-978c-92dbce499a8c.pkpass  hotelkey_05d5e370-ec7d-45c7-9950-0a06eb28737d.pkpass  hotelkey_080617fa-ad58-459b-aae3-4606b870c87f.pkpass  hotelkey_09441903-2c2f-4ef6-9798-eb4be153a5f4.pkpass  hotelkey_0a6251ea-9941-46df-9126-1771950312e5.pkpass  hotelkey_0ac8406e-3f8f-48e9-b6ca-3a63eec319c6.pkpass  hotelkey_0e6ad5a9-ae40-403e-ae30-1b826270c009.pkpass  hotelkey_0fd864fc-80f2-4f5d-a756-895afc30a491.pkpass  hotelkey_155b2396-d10f-43f4-b7af-2d3385ac3b50.pkpass  hotelkey_158fc330-a591-4adf-bb15-b76775b23842.pkpass  hotelkey_17f2af13-2bd6-4c01-8615-e6c867ba3988.pkpass  hotelkey_1836cd78-9839-4339-82cc-2004ced48356.pkpass  hotelkey_1c58a840-aeba-4c9d-995b-4a2d8dad3d06.pkpass  hotelkey_1ceba5fd-aaf3-4001-8121-3b18871fdd4e.pkpass  hotelkey_1d121660-e5e0-4bc4-ae54-bb4b836160cd.pkpass  hotelkey_205030d2-9fbc-4de9-9be4-9314ca4de05c.pkpass  hotelkey_206da669-29af-4965-97c4-a5a6c445c01c.pkpass  hotelkey_209e2e8d-edd4-4a05-9e4b-7da568ea5862.pkpass  hotelkey_25693fb4-6e96-420a-b74b-b85eec9db5ad.pkpass  hotelkey_26bdf2b2-2a99-430e-8d26-2e1df6cae320.pkpass  hotelkey_26e8d779-91b0-435a-aa17-5f1d7b160486.pkpass  hotelkey_27a694af-5c80-4f6f-819c-bccefe8c3f04.pkpass  hotelkey_284c9dc4-2073-4e82-89cd-cd1b50bc4c0c.pkpass  hotelkey_288e908a-7910-404f-958f-478d27009ee2.pkpass  hotelkey_28d32934-3d9c-4921-9093-71945614f450.pkpass  hotelkey_2af8fc44-6566-48b7-bc85-3f06498157bb.pkpass  (+156 more)
backend/app/utils/: date_formatting.py  email.py  validators.py
backend/templates/: email_download.html  email_key.html  password_reset_email.html  welcome_email.html
backend/tests/: conftest.py  test_users.py
(+106 files in other folders)
