[tool.poetry]
name = "hotel-key-system"
version = "0.1.0"
description = "Hotel Virtual Key System"
authors = ["Your Name ayoubenmbarek@gmail.com"]
readme = "README.md"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.0.0"  # Added for BaseSettings
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"  # Add this line with specific version
python-multipart = "^0.0.6"
email-validator = "^2.0.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}
jinja2 = "^3.1.2"
requests = "^2.31.0"
httpx = {extras = ["http2"], version = "^0.28.1"}
PyJWT = "^2.10.1"
pytz = "^2025.1"
twilio = "^8.10.0"  # Added Twilio for SMS service
vonage = "^4.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
